--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
                 </a>
             </li>
             <li class="mb-4">
-                <a href="#" class="flex items-center p-3 rounded-lg text-white hover:bg-brand-blue-light transition-colors duration-200">
+                <a href="{% url 'scans:run_scan'%}" class="flex items-center p-3 rounded-lg text-white hover:bg-brand-blue-light transition-colors duration-200">
                     <!-- Company Analysis Icon (still a placeholder for now, no specific URL) -->
                     <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9.75 10M12.75 17L12.75 10M15.75 17L15.75 10M21 12C21 17.5228 16.5228 22 11 22C5.47715 22 1 17.5228 1 12C1 6.47715 5.47715 2 11 2C16.5228 2 21 6.47715 21 12Z"></path></svg>
                     <span class="font-medium">Company Analysis</span>
